fixed issue with alignment on the left side

--- a/css/app.css
+++ b/css/app.css
@@ -699,6 +699,7 @@ a.sectionTitle{
     width: 100%;
     background: #5a5959;
     padding: 1em;
+    margin-top: 1.9em;
 }
 #profile .profilepic {
     float: none;
